# plant-manager

./: .gitignore  README.md  docker-compose.yml  plant_watering_system_overwiew.md
.claude/: settings.local.json
api/: .gitignore  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 9842ecfd91c1_initial_schema.py  add_firmware_builds.py  add_firmware_settings.py  add_groups.py
api/app/: auth.py  config.py  database.py  main.py  mqtt.py
api/app/models/: __init__.py  firmware_build.py  firmware_settings.py  group.py  plant.py  pump.py  user.py  watering.py
api/app/routers/: auth.py  dashboard.py  firmware.py  groups.py  plants.py  pumps.py  schedules.py  setup.py  watering.py  ws.py
api/app/schemas/: dashboard.py  firmware.py  group.py  plant.py  pump.py  schedule.py  user.py  watering.py
api/app/worker/: auto.py  main.py  orchestrator.py  scheduler.py  telemetry.py
esphome/: plant.yaml  pump.yaml  secrets.yaml.example
esphome/custom_components/stemma_soil_sensor/: sensor.py  stemma_soil_sensor.h
firmware/: Dockerfile  server.py
webapp/: .gitignore  Dockerfile  package-lock.json  package.json
webapp/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
webapp/src/components/: app-sidebar.tsx  breadcrumb-nav.tsx  flash-dialog.tsx  led-control.tsx  moisture-badge.tsx  nav.tsx  plant-card.tsx  schedule-form.tsx  settings-form.tsx  water-button.tsx  watering-history.tsx
webapp/src/hooks/: use-dashboard-live.ts  use-plant-live.ts  use-pump-live.ts
webapp/src/lib/: api.ts  auth-context.tsx  types.ts
(+25 files in other folders)
